# minimizer

./: .gitignore  CMakeLists.txt  readme.md
include/: config.hpp  descent.hpp  linesearch.hpp  minimizer.hpp
src/: main.cpp
